# ace

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
account/: backends.py  bacs.py  forms.py  models.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: profile.html
ace/: asgi.py  settings.py  wsgi.py
announcement/: models.py  urls.py  views.py
announcement/migrations/: 0001_initial.py  0005_alter_announcement_expiry_date.py  0006_auto_20211020_1330.py  0009_auto_20211028_1406.py  0010_alter_announcement_expiry_date.py  0012_auto_20211028_2118.py  0015_alter_announcement_expiry_date.py
announcement/templates/announcement/: announcement_confirm_delete.html  announcement_detail.html  announcement_form.html  announcement_list.html
chat/: admin.py  models.py
chat/migrations/: 0001_initial.py  0002_alter_chat_content.py
src/ace/: db.sqlite3  requirements.txt
src/ace/account/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
src/ace/account/migrations/: 0002_alter_profile_user.py
src/ace/ace/: settings.py  urls.py
src/ace/announcement/: admin.py  forms.py  models.py  urls.py  views.py
src/ace/announcement/migrations/: 0001_initial.py  (+8 more)
src/ace/chat/: models.py  urls.py  views.py
src/ace/workspace/: admin.py  models.py  urls.py  views.py
workspace/: forms.py  models.py  urls.py
workspace/migrations/: 0001_initial.py
workspace/static/workspace/: main.css  sidebar.css
workspace/templates/workspace/: about.html  landing_page.html  sidebar.html  workspace_detail.html
(+24 files in other folders)
